feat: initial version

--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -1,59 +1,88 @@
 {% extends 'layouts/page.njk' %}
 
-{% block content %}
-  {{ appHeading({
-    text: heading,
-    caption: "Core delivery platform Node.js Frontend Template."
-  }) }}
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
+{% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
+{% block pageTitle %}Generate Code Review - Intelligent Code Reviewer{% endblock %}
+
+{% block beforeContent %}
+  {{ govukBreadcrumbs({
+    items: [
+      {
+        text: "Home",
+        href: "/"
+      }
+    ]
+  }) }}
+{% endblock %}
+
+{% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <div class="govuk-body" data-testid="app-page-body">
-        <p>
-          Welcome to the Frontend Template, a starter kit for Core Delivery Platform Node.js Frontends 🚀
-        </p>
-        <p>
-          Based on <a href="https://defra.github.io/software-development-standards">DEFRA</a> and <a
-            href="https://design-system.service.gov.uk/">GOV.UK</a> best practices this starter kit provides you with
-          a deployable, production ready template 🙌🏻 to start your new service with.
-        </p>
-        <p>This template comes with:</p>
-        <ul>
-          <li>
-            <a href="https://frontend.design-system.service.gov.uk/">GOV.UK Frontend</a>
-          </li>
-          <li>
-            <a href="https://hapi.dev">Hapi.js</a>
-          </li>
-          <li>
-            <a href="https://mozilla.github.io/nunjucks/">Nunjucks</a>
-          </li>
-          <li>
-            <a href="https://github.com/mozilla/node-convict">Node Convict</a>
-          </li>
-          <li>
-            <a href="https://jestjs.io/">Jest testing</a>
-          </li>
-          <li>GitHub Actions Pull Request and Publish jobs</li>
-          <li>
-            <a href="https://github.com/pinojs/pino">PinoJs logging</a>
-          </li>
-          <li>
-            <a href="https://standardjs.com">Standard JS</a>
-          </li>
-          <li>
-            <a href="https://eslint.org">ESLint</a>
-          </li>
-          <li>
-            <a href="https://stylelint.io">StyleLint</a>
-          </li>
-          <li>
-            <a href="https://prettier.io">Prettier</a>
-          </li>
-          <li>and lots more... 😎</li>
-        </ul>
-      </div>
+    <div class="govuk-grid-column-full">
+      <h1 class="govuk-heading-l">
+        Generate Code Review
+      </h1>
+
+      <p class="govuk-body">Submit a git repository for code review</p>
+
+      {% if errors %}
+        {{ govukErrorSummary({
+          titleText: "There is a problem",
+          errorList: errors.items
+        }) }}
+      {% endif %}
+
+      <form method="post" action="/" novalidate>
+        <div class="govuk-form-group govuk-!-margin-bottom-6">
+          {{ govukInput({
+            label: {
+              text: "Repository URL",
+              classes: "govuk-label--m"
+            },
+            id: "repository-url",
+            name: "repository_url",
+            type: "url",
+            autocomplete: "url",
+            spellcheck: false,
+            classes: "govuk-!-width-two-thirds",
+            errorMessage: (errors.repositoryUrl if errors else null) if errors else null,
+            value: (values.repositoryUrl if values else '') if values else ''
+          }) }}
+        </div>
+
+        <div class="govuk-form-group govuk-!-margin-bottom-6">
+          {% set standardSetItems = [] %}
+          {% for set in standardSets | default([]) %}
+            {% set standardSetItems = standardSetItems.concat([{
+              value: set._id,
+              text: set.name,
+              checked: false,
+              hint: {
+                html: 'View the <a class="govuk-link" href="' + set.repository_url + '" target="_blank" rel="noopener noreferrer">' + set.name + ' (opens in new tab)</a>'
+              }
+            }]) %}
+          {% endfor %}
+
+          {{ govukCheckboxes({
+            name: "standard_sets",
+            fieldset: {
+              legend: {
+                text: "Standards",
+                classes: "govuk-fieldset__legend--m"
+              }
+            },
+            items: standardSetItems
+          }) }}
+        </div>
+
+        {{ govukButton({
+          text: "Generate code review",
+          classes: "govuk-button--primary"
+        }) }}
+      </form>
     </div>
   </div>
-
 {% endblock %}
