--- a/src/server/error/index.njk
+++ b/src/server/error/index.njk
@@ -7,7 +7,19 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>{{ message }}</p>
+      <p class="govuk-body">{{ message }}</p>
+
+      {% if messageList %}
+        <ul class="govuk-list govuk-list--bullet">
+          {% for item in messageList %}
+            <li>{{ item }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+
+      <p class="govuk-body">
+        <a href="/" class="govuk-link">Return to the homepage</a>
+      </p>
     </div>
   </div>
 {% endblock %}
